added support detecting new files

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
     "gulp.spritesmith": "^4.1.0",
     "main-bower-files": "^2.9.0",
     "require-dir": "^0.3.0"
