--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gulp-watch": "^4.3.5",
     "gulp.spritesmith": "^4.1.0",
     "main-bower-files": "^2.9.0",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
