--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "malihu-custom-scrollbar-plugin": "~3.0.9",
+    "bootstrap-sass": "~3.3.5"
   }
 }
