--- a/package.json
+++ b/package.json
@@ -1,39 +1,49 @@
 {
   "name": "gulp-starter",
-  "version": "0.0.1",
-  "description": "just a simple gulp starter",
+  "version": "1.0.0",
+  "description": "After cloning the repository needs to be done\r ```sh\r $ bower i && npm i\r ```\r Then just need to run the command\r ```sh\r $ gulp\r ```",
   "main": "gulpfile.js",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "gulp-changed": "^1.3.0",
     "browser-sync": "^2.9.3",
     "gulp": "^3.9.0",
-    "gulp-bower": "0.0.10",
-    "gulp-changed": "^1.3.0",
     "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.3.1",
+    "gulp-combine-mq": "^0.4.0",
+    "gulp-bower": "^0.0.10",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-filter": "^3.0.1",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rigger": "^0.5.8",
+    "gulp-filter": "^3.0.1",
+    "gulp-coffee": "^2.3.1",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "gulp.spritesmith": "^4.1.0",
+    "gulp-rigger": "^0.5.8",
     "main-bower-files": "^2.9.0",
-    "path": "^0.12.7",
+    "gulp-watch": "^4.3.5",
+    "gulp-uglify": "^1.4.1",
+    "gulp.spritesmith": "^4.1.0",
     "require-dir": "^0.3.0",
+    "path": "^0.12.7",
     "run-sequence": "^1.1.3"
   },
+  "devDependencies": {},
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp watch --env=development",
     "gulp-dev": "gulp default --env=development",
     "gulp-prod": "gulp default --env=production"
   },
-  "author": "Culttm",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Culttm/gulp-starter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Culttm/gulp-starter/issues"
+  },
+  "homepage": "https://github.com/Culttm/gulp-starter"
 }
